--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Up-Cycle",
+  "name": "up-cycle",
   "version": "1.0.0",
   "description": "Up-Cycle is an app that will inform you on how much you can get for recyclable materials, where you can drop off those materials for cash. It will also have some tips on recycling and how it positively impacts the environment.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
